cheese: fix alignments of package icons

--- a/projects.gnome.org/cheese/data/themes/cheese/document.screen.css
+++ b/projects.gnome.org/cheese/data/themes/cheese/document.screen.css
@@ -178,17 +178,23 @@ div.code
   font-family: monospace;
 }
 
+.download img
+{
+  vertical-align: middle;
+  padding-right: 4px;
+}
+
 .download a
 {
   text-decoration: none;
   font-weight: bold;
   color: blue;
-  vertical-align: middle;
 }
 
 .download p
 {
-  padding-left: 36px;
+  margin-top: 0px;
+  padding-left: 40px;
 }
 
 .download
